welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: ')' expected but '<-' found.
    fro(j<- 0 to getMondeHauteur()-1){
         ^ColumnByColumn:3: error: ';' expected but ')' found.
    fro(j<- 0 to getMondeHauteur()-1){
                                    ^