welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  var num= 0
  for(i<- 0 to getMondeLargeur()-1){
    fro(j<- 0 to getMondeHauteur()-1){
      setPos(i, j)
      ecritMessage(" num ")
      num +=1
    }
  }
}